// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginContainer render snapshots 📸 LoginContainer should match  snap shot  1`] = `
<div
  className="login__container"
>
  <div
    className="loginForm"
  >
    <div
      className="login__form"
    >
      <form
        className=""
      >
        <div
          className="form-inputs"
        >
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              className="mb-2 form-control"
              id="email"
              name="email"
              placeholder="Enter your email"
              type="email"
            />
          </div>
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              className="mb-2 form-control"
              id="password"
              name="password"
              placeholder="Enter a password"
              type="password"
            />
          </div>
        </div>
        <div
          className="form-group"
        >
          <button
            className="btn btn-dark btn-lg btn-pill"
            name="submit"
            onClick={[Function]}
            type="button"
          >
            Login
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`LoginPage render snapshots 📸 LoginPage should match snap shot 1`] = `
<div
  className="page__login"
>
  <div
    className="login__container"
  >
    <div
      className="loginForm"
    >
      <div
        className="login__form"
      >
        <form
          className=""
        >
          <div
            className="form-inputs"
          >
            <div
              className="form-group"
              onChange={[Function]}
            >
              <input
                className="mb-2 form-control"
                id="email"
                name="email"
                placeholder="Enter your email"
                type="email"
              />
            </div>
            <div
              className="form-group"
              onChange={[Function]}
            >
              <input
                className="mb-2 form-control"
                id="password"
                name="password"
                placeholder="Enter a password"
                type="password"
              />
            </div>
          </div>
          <div
            className="form-group"
          >
            <button
              className="btn btn-dark btn-lg btn-pill"
              name="submit"
              onClick={[Function]}
              type="button"
            >
              Login
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
